src/stylesheets/module/_project.scss
.project {
    transition: all .33s ease-in-out;
    &:nth-child(odd) {
        @include respond-to(medium) {
            margin-right: 30px;
        }
    }
    &:not(:last-child) {
        margin-bottom: 56px;

        @include respond-to(medium) {
            margin-bottom: 72px;
        }
    }
    &:nth-last-child(2) {
        margin-bottom: 0;
    }
    &:hover {
        box-shadow: 0 8px 24px rgba(#000,.1),
                    0 0 8px -16px rgba(#000,.75);
        transform: translateY(-16px);
    }
}

.project--local-boiler-company {
    .project-image {
        background-color: #FFD40A;
    }
}

.project--sealskinz {
    .project-image {
        background-color: #202C6D;
    }
}

.project--persistent-basket {
    .project-image {
        background-color: #0191DE;
    }
}

.project--blucommerce-denim-templates {
    .project-image {
        background-image: linear-gradient(-180deg, #D5E6FC 3%, #ABCDF9 100%);

    }
}

.project--teapigs {
    .project-image {
        background-color: #a2c87f;
    }
}

.project--route-one {
    .project-image {
        background-color: #00aba2;
    }
}

.project-image {
    height: 280px;
    overflow-x: scroll;
    padding-left: 24px;

    @include respond-to(small) {
        height: 460px;
    }

    @include respond-to(medium) {
        height: 560px;
        padding-left: 40px;
    }
}

.project-image-item {
    box-shadow: 0 2px 16px rgba(#000,.2),
                0 0 8px -12px rgba(#000,.75)
                ;
    &:not(:last-child) {
        margin-right: 16px;

        @include respond-to(medium) {
            margin-right: 24px;
        }
    }
    &:last-child {
        margin-right: 24px;

        @include respond-to(medium) {
            margin-right: 40px;
        }
    }
}

.project-image-item--desktop {
    @include respond-to(medium) {
        width: 480px;
    }
}

.project-image-item--mobile {
    @include respond-to(medium) {
        width: 300px;
    }
}

.project-meta {
    background-color: #fff;
    padding: 24px;

    @include respond-to(medium) {
        padding: 32px;
    }
}

.project-title {
    svg {
        transition: .5s stroke cubic-bezier(0.645, 0.045, 0.355, 1);
        &:hover {
            g {
                stroke: var(--primary);
            }
        }

        g {
            stroke: var(--grey);
        }
    }

    g {
        stroke: var(--grey);
        transition: .5s stroke cubic-bezier(0.645, 0.045, 0.355, 1);
        &:hover {
            stroke: var(--primary);
        }
    }
}

.project-list {
    > li {
        &:not(:last-child) {
            margin-bottom: 16px;

            @include respond-to(medium) {
                // margin-bottom: 24px;
            }
        }
    }
}

